src/frontc/cparser.output
   0  $accept : %entry% $end

   1  interpret : file EOF

   2  file : globals

   3  globals :
   4          | global globals
   5          | SEMICOLON globals

   6  location :

   7  global : declaration
   8         | function_def
   9         | EXTERN string_constant declaration
  10         | EXTERN string_constant LBRACE globals RBRACE
  11         | ASM LPAREN string_constant RPAREN SEMICOLON
  12         | pragma
  13         | IDENT LPAREN old_parameter_list_ne RPAREN old_pardef_list SEMICOLON
  14         | IDENT LPAREN RPAREN SEMICOLON
  15         | AT_TRANSFORM LBRACE global RBRACE IDENT LBRACE globals RBRACE
  16         | AT_TRANSFORMEXPR LBRACE expression RBRACE IDENT LBRACE expression RBRACE
  17         | location error SEMICOLON

  18  id_or_typename : IDENT
  19                 | NAMED_TYPE
  20                 | AT_NAME LPAREN IDENT RPAREN

  21  maybecomma :
  22             | COMMA

  23  primary_expression : IDENT
  24                     | constant
  25                     | paren_comma_expression
  26                     | LPAREN block RPAREN
  27                     | AT_EXPR LPAREN IDENT RPAREN

  28  postfix_expression : primary_expression
  29                     | postfix_expression bracket_comma_expression
  30                     | postfix_expression LPAREN arguments RPAREN
  31                     | BUILTIN_VA_ARG LPAREN expression COMMA type_name RPAREN
  32                     | BUILTIN_TYPES_COMPAT LPAREN type_name COMMA type_name RPAREN
  33                     | BUILTIN_OFFSETOF LPAREN type_name COMMA offsetof_member_designator RPAREN
  34                     | postfix_expression DOT id_or_typename
  35                     | postfix_expression ARROW id_or_typename
  36                     | postfix_expression PLUS_PLUS
  37                     | postfix_expression MINUS_MINUS
  38                     | LPAREN type_name RPAREN LBRACE initializer_list_opt RBRACE

  39  offsetof_member_designator : id_or_typename
  40                             | offsetof_member_designator DOT IDENT
  41                             | offsetof_member_designator bracket_comma_expression

  42  unary_expression : postfix_expression
  43                   | PLUS_PLUS unary_expression
  44                   | MINUS_MINUS unary_expression
  45                   | SIZEOF unary_expression
  46                   | SIZEOF LPAREN type_name RPAREN
  47                   | ALIGNOF unary_expression
  48                   | ALIGNOF LPAREN type_name RPAREN
  49                   | PLUS cast_expression
  50                   | MINUS cast_expression
  51                   | STAR cast_expression
  52                   | AND cast_expression
  53                   | EXCLAM cast_expression
  54                   | TILDE cast_expression
  55                   | AND_AND IDENT

  56  cast_expression : unary_expression
  57                  | LPAREN type_name RPAREN cast_expression

  58  multiplicative_expression : cast_expression
  59                            | multiplicative_expression STAR cast_expression
  60                            | multiplicative_expression SLASH cast_expression
  61                            | multiplicative_expression PERCENT cast_expression

  62  additive_expression : multiplicative_expression
  63                      | additive_expression PLUS multiplicative_expression
  64                      | additive_expression MINUS multiplicative_expression

  65  shift_expression : additive_expression
  66                   | shift_expression INF_INF additive_expression
  67                   | shift_expression SUP_SUP additive_expression

  68  relational_expression : shift_expression
  69                        | relational_expression INF shift_expression
  70                        | relational_expression SUP shift_expression
  71                        | relational_expression INF_EQ shift_expression
  72                        | relational_expression SUP_EQ shift_expression

  73  equality_expression : relational_expression
  74                      | equality_expression EQ_EQ relational_expression
  75                      | equality_expression EXCLAM_EQ relational_expression

  76  bitwise_and_expression : equality_expression
  77                         | bitwise_and_expression AND equality_expression

  78  bitwise_xor_expression : bitwise_and_expression
  79                         | bitwise_xor_expression CIRC bitwise_and_expression

  80  bitwise_or_expression : bitwise_xor_expression
  81                        | bitwise_or_expression PIPE bitwise_xor_expression

  82  logical_and_expression : bitwise_or_expression
  83                         | logical_and_expression AND_AND bitwise_or_expression

  84  logical_or_expression : logical_and_expression
  85                        | logical_or_expression PIPE_PIPE logical_and_expression

  86  conditional_expression : logical_or_expression
  87                         | logical_or_expression QUEST opt_expression COLON conditional_expression

  88  assignment_expression : conditional_expression
  89                        | cast_expression EQ assignment_expression
  90                        | cast_expression PLUS_EQ assignment_expression
  91                        | cast_expression MINUS_EQ assignment_expression
  92                        | cast_expression STAR_EQ assignment_expression
  93                        | cast_expression SLASH_EQ assignment_expression
  94                        | cast_expression PERCENT_EQ assignment_expression
  95                        | cast_expression AND_EQ assignment_expression
  96                        | cast_expression PIPE_EQ assignment_expression
  97                        | cast_expression CIRC_EQ assignment_expression
  98                        | cast_expression INF_INF_EQ assignment_expression
  99                        | cast_expression SUP_SUP_EQ assignment_expression

 100  expression : assignment_expression

 101  constant : CST_INT
 102           | CST_FLOAT
 103           | CST_CHAR
 104           | CST_WCHAR
 105           | string_constant
 106           | wstring_list

 107  string_constant : string_list

 108  one_string_constant : CST_STRING

 109  string_list : one_string
 110              | string_list one_string

 111  wstring_list : CST_WSTRING
 112               | wstring_list one_string
 113               | wstring_list CST_WSTRING

 114  one_string : CST_STRING
 115             | FUNCTION__
 116             | PRETTY_FUNCTION__

 117  init_expression : expression
 118                  | LBRACE initializer_list_opt RBRACE

 119  initializer_list : initializer
 120                   | initializer COMMA initializer_list_opt

 121  initializer_list_opt :
 122                       | initializer_list

 123  initializer : init_designators eq_opt init_expression
 124              | gcc_init_designators init_expression
 125              | init_expression

 126  eq_opt : EQ
 127         |

 128  init_designators : DOT id_or_typename init_designators_opt
 129                   | LBRACKET expression RBRACKET init_designators_opt
 130                   | LBRACKET expression ELLIPSIS expression RBRACKET

 131  init_designators_opt :
 132                       | init_designators

 133  gcc_init_designators : id_or_typename COLON

 134  arguments :
 135            | comma_expression

 136  opt_expression :
 137                 | comma_expression

 138  comma_expression : expression
 139                   | expression COMMA comma_expression
 140                   | error COMMA comma_expression

 141  comma_expression_opt :
 142                       | comma_expression

 143  paren_comma_expression : LPAREN comma_expression RPAREN
 144                         | LPAREN error RPAREN

 145  bracket_comma_expression : LBRACKET comma_expression RBRACKET
 146                           | LBRACKET error RBRACKET

 147  block : block_begin local_labels block_attrs block_element_list RBRACE
 148        | error location RBRACE

 149  block_begin : LBRACE

 150  block_attrs :
 151              | BLOCKATTRIBUTE paren_attr_list_ne

 152  block_element_list :
 153                     | declaration block_element_list
 154                     | statement block_element_list
 155                     | IDENT COLON
 156                     | pragma block_element_list

 157  local_labels :
 158               | LABEL__ local_label_names SEMICOLON local_labels

 159  local_label_names : IDENT
 160                    | IDENT COMMA local_label_names

 161  statement : SEMICOLON
 162            | comma_expression SEMICOLON
 163            | block
 164            | IF paren_comma_expression statement
 165            | IF paren_comma_expression statement ELSE statement
 166            | SWITCH paren_comma_expression statement
 167            | WHILE paren_comma_expression statement
 168            | DO statement WHILE paren_comma_expression SEMICOLON
 169            | FOR LPAREN for_clause opt_expression SEMICOLON opt_expression RPAREN statement
 170            | IDENT COLON attribute_nocv_list statement
 171            | CASE expression COLON statement
 172            | CASE expression ELLIPSIS expression COLON statement
 173            | DEFAULT COLON
 174            | RETURN SEMICOLON
 175            | RETURN comma_expression SEMICOLON
 176            | BREAK SEMICOLON
 177            | CONTINUE SEMICOLON
 178            | GOTO IDENT SEMICOLON
 179            | GOTO STAR comma_expression SEMICOLON
 180            | ASM asmattr LPAREN asmtemplate asmoutputs RPAREN SEMICOLON
 181            | MSASM
 182            | TRY block EXCEPT paren_comma_expression block
 183            | TRY block FINALLY block
 184            | error location SEMICOLON

 185  for_clause : opt_expression SEMICOLON
 186             | declaration

 187  declaration : decl_spec_list init_declarator_list SEMICOLON
 188              | decl_spec_list SEMICOLON

 189  init_declarator_list : init_declarator
 190                       | init_declarator COMMA init_declarator_list

 191  init_declarator : declarator
 192                  | declarator EQ init_expression

 193  decl_spec_list : TYPEDEF decl_spec_list_opt
 194                 | EXTERN decl_spec_list_opt
 195                 | STATIC decl_spec_list_opt
 196                 | AUTO decl_spec_list_opt
 197                 | REGISTER decl_spec_list_opt
 198                 | type_spec decl_spec_list_opt_no_named
 199                 | INLINE decl_spec_list_opt
 200                 | cvspec decl_spec_list_opt
 201                 | attribute_nocv decl_spec_list_opt
 202                 | AT_SPECIFIER LPAREN IDENT RPAREN

 203  decl_spec_list_opt :
 204                     | decl_spec_list

 205  decl_spec_list_opt_no_named :
 206                              | decl_spec_list

 207  type_spec : VOID
 208            | CHAR
 209            | SHORT
 210            | INT
 211            | LONG
 212            | INT64
 213            | FLOAT
 214            | DOUBLE
 215            | SIGNED
 216            | UNSIGNED
 217            | STRUCT id_or_typename
 218            | STRUCT just_attributes id_or_typename
 219            | STRUCT id_or_typename LBRACE struct_decl_list RBRACE
 220            | STRUCT LBRACE struct_decl_list RBRACE
 221            | STRUCT just_attributes id_or_typename LBRACE struct_decl_list RBRACE
 222            | STRUCT just_attributes LBRACE struct_decl_list RBRACE
 223            | UNION id_or_typename
 224            | UNION id_or_typename LBRACE struct_decl_list RBRACE
 225            | UNION LBRACE struct_decl_list RBRACE
 226            | UNION just_attributes id_or_typename LBRACE struct_decl_list RBRACE
 227            | UNION just_attributes LBRACE struct_decl_list RBRACE
 228            | ENUM id_or_typename
 229            | ENUM id_or_typename LBRACE enum_list maybecomma RBRACE
 230            | ENUM LBRACE enum_list maybecomma RBRACE
 231            | ENUM just_attributes id_or_typename LBRACE enum_list maybecomma RBRACE
 232            | ENUM just_attributes LBRACE enum_list maybecomma RBRACE
 233            | NAMED_TYPE
 234            | TYPEOF LPAREN expression RPAREN
 235            | TYPEOF LPAREN type_name RPAREN

 236  struct_decl_list :
 237                   | decl_spec_list SEMICOLON struct_decl_list
 238                   | SEMICOLON struct_decl_list
 239                   | decl_spec_list field_decl_list SEMICOLON struct_decl_list
 240                   | pragma struct_decl_list
 241                   | error SEMICOLON struct_decl_list

 242  field_decl_list : field_decl
 243                  | field_decl COMMA field_decl_list

 244  field_decl : declarator
 245             | declarator COLON expression attributes
 246             | COLON expression

 247  enum_list : enumerator
 248            | enum_list COMMA enumerator
 249            | enum_list COMMA error

 250  enumerator : IDENT
 251             | IDENT EQ expression

 252  declarator : pointer_opt direct_decl attributes_with_asm

 253  direct_decl : id_or_typename
 254              | LPAREN attributes declarator RPAREN
 255              | direct_decl LBRACKET attributes comma_expression_opt RBRACKET
 256              | direct_decl LBRACKET attributes error RBRACKET
 257              | direct_decl parameter_list_startscope rest_par_list RPAREN

 258  parameter_list_startscope : LPAREN

 259  rest_par_list :
 260                | parameter_decl rest_par_list1

 261  rest_par_list1 :
 262                 | COMMA ELLIPSIS
 263                 | COMMA parameter_decl rest_par_list1

 264  parameter_decl : decl_spec_list declarator
 265                 | decl_spec_list abstract_decl
 266                 | decl_spec_list
 267                 | LPAREN parameter_decl RPAREN

 268  old_proto_decl : pointer_opt direct_old_proto_decl

 269  direct_old_proto_decl : direct_decl LPAREN old_parameter_list_ne RPAREN old_pardef_list
 270                        | direct_decl LPAREN RPAREN

 271  old_parameter_list_ne : IDENT
 272                        | IDENT COMMA old_parameter_list_ne

 273  old_pardef_list :
 274                  | decl_spec_list old_pardef SEMICOLON ELLIPSIS
 275                  | decl_spec_list old_pardef SEMICOLON old_pardef_list

 276  old_pardef : declarator
 277             | declarator COMMA old_pardef
 278             | error

 279  pointer : STAR attributes pointer_opt

 280  pointer_opt :
 281              | pointer

 282  type_name : decl_spec_list abstract_decl
 283            | decl_spec_list

 284  abstract_decl : pointer_opt abs_direct_decl attributes
 285                | pointer

 286  abs_direct_decl : LPAREN attributes abstract_decl RPAREN
 287                  | LPAREN error RPAREN
 288                  | abs_direct_decl_opt LBRACKET comma_expression_opt RBRACKET
 289                  | abs_direct_decl parameter_list_startscope rest_par_list RPAREN

 290  abs_direct_decl_opt : abs_direct_decl
 291                      |

 292  function_def : function_def_start block

 293  function_def_start : decl_spec_list declarator
 294                     | decl_spec_list old_proto_decl
 295                     | IDENT parameter_list_startscope rest_par_list RPAREN
 296                     | IDENT LPAREN old_parameter_list_ne RPAREN old_pardef_list
 297                     | IDENT LPAREN RPAREN

 298  cvspec : CONST
 299         | VOLATILE
 300         | RESTRICT

 301  attributes :
 302             | attribute attributes

 303  attributes_with_asm :
 304                      | attribute attributes_with_asm
 305                      | ASM LPAREN string_constant RPAREN attributes

 306  attribute_nocv : ATTRIBUTE LPAREN paren_attr_list RPAREN
 307                 | DECLSPEC paren_attr_list_ne
 308                 | MSATTR
 309                 | THREAD

 310  attribute_nocv_list :
 311                      | attribute_nocv attribute_nocv_list

 312  attribute : attribute_nocv
 313            | CONST
 314            | RESTRICT
 315            | VOLATILE

 316  just_attribute : ATTRIBUTE LPAREN paren_attr_list RPAREN
 317                 | DECLSPEC paren_attr_list_ne

 318  just_attributes : just_attribute
 319                  | just_attribute just_attributes

 320  pragma : PRAGMA attr PRAGMA_EOL
 321         | PRAGMA attr SEMICOLON PRAGMA_EOL
 322         | PRAGMA_LINE

 323  primary_attr : IDENT
 324               | NAMED_TYPE
 325               | LPAREN attr RPAREN
 326               | IDENT IDENT
 327               | CST_INT
 328               | string_constant
 329               | CONST
 330               | IDENT COLON CST_INT
 331               | CST_INT COLON CST_INT
 332               | DEFAULT COLON CST_INT
 333               | VOLATILE

 334  postfix_attr : primary_attr
 335               | IDENT LPAREN RPAREN
 336               | IDENT paren_attr_list_ne
 337               | postfix_attr ARROW id_or_typename
 338               | postfix_attr DOT id_or_typename
 339               | postfix_attr LBRACKET attr RBRACKET

 340  unary_attr : postfix_attr
 341             | SIZEOF unary_expression
 342             | SIZEOF LPAREN type_name RPAREN
 343             | ALIGNOF unary_expression
 344             | ALIGNOF LPAREN type_name RPAREN
 345             | PLUS cast_attr
 346             | MINUS cast_attr
 347             | STAR cast_attr
 348             | AND cast_attr
 349             | EXCLAM cast_attr
 350             | TILDE cast_attr

 351  cast_attr : unary_attr

 352  multiplicative_attr : cast_attr
 353                      | multiplicative_attr STAR cast_attr
 354                      | multiplicative_attr SLASH cast_attr
 355                      | multiplicative_attr PERCENT cast_attr

 356  additive_attr : multiplicative_attr
 357                | additive_attr PLUS multiplicative_attr
 358                | additive_attr MINUS multiplicative_attr

 359  shift_attr : additive_attr
 360             | shift_attr INF_INF additive_attr
 361             | shift_attr SUP_SUP additive_attr

 362  relational_attr : shift_attr
 363                  | relational_attr INF shift_attr
 364                  | relational_attr SUP shift_attr
 365                  | relational_attr INF_EQ shift_attr
 366                  | relational_attr SUP_EQ shift_attr

 367  equality_attr : relational_attr
 368                | equality_attr EQ_EQ relational_attr
 369                | equality_attr EXCLAM_EQ relational_attr

 370  bitwise_and_attr : equality_attr
 371                   | bitwise_and_attr AND equality_attr

 372  bitwise_xor_attr : bitwise_and_attr
 373                   | bitwise_xor_attr CIRC bitwise_and_attr

 374  bitwise_or_attr : bitwise_xor_attr
 375                  | bitwise_or_attr PIPE bitwise_xor_attr

 376  logical_and_attr : bitwise_or_attr
 377                   | logical_and_attr AND_AND bitwise_or_attr

 378  logical_or_attr : logical_and_attr
 379                  | logical_or_attr PIPE_PIPE logical_and_attr

 380  conditional_attr : logical_or_attr
 381                   | logical_or_attr QUEST conditional_attr COLON conditional_attr

 382  attr : conditional_attr

 383  attr_list_ne : attr
 384               | attr COMMA attr_list_ne
 385               | error COMMA attr_list_ne

 386  attr_list :
 387            | attr_list_ne

 388  paren_attr_list_ne : LPAREN attr_list_ne RPAREN
 389                     | LPAREN error RPAREN

 390  paren_attr_list : LPAREN attr_list RPAREN
 391                  | LPAREN error RPAREN

 392  asmattr :
 393          | VOLATILE asmattr
 394          | CONST asmattr

 395  asmtemplate : one_string_constant
 396              | one_string_constant asmtemplate

 397  asmoutputs :
 398             | COLON asmoperands asminputs

 399  asmoperands :
 400              | asmoperandsne

 401  asmoperandsne : asmoperand
 402                | asmoperandsne COMMA asmoperand

 403  asmoperand : asmopname string_constant LPAREN expression RPAREN
 404             | asmopname string_constant LPAREN error RPAREN

 405  asminputs :
 406            | COLON asmoperands asmclobber

 407  asmopname :
 408            | LBRACKET IDENT RBRACKET

 409  asmclobber :
 410             | COLON asmcloberlst_ne

 411  asmcloberlst_ne : one_string_constant
 412                  | one_string_constant COMMA asmcloberlst_ne

 413  %entry% : '\001' interpret
 414          | '\002' file

state 0
	$accept : . %entry% $end  (0)

	'\001'  shift 1
	'\002'  shift 2
	.  error

	%entry%  goto 3


state 1
	%entry% : '\001' . interpret  (413)
	globals : .  (3)
	location : .  (6)

	IDENT  shift 4
	NAMED_TYPE  shift 5
	CHAR  shift 6
	INT  shift 7
	DOUBLE  shift 8
	FLOAT  shift 9
	VOID  shift 10
	INT64  shift 11
	ENUM  shift 12
	STRUCT  shift 13
	TYPEDEF  shift 14
	UNION  shift 15
	SIGNED  shift 16
	UNSIGNED  shift 17
	LONG  shift 18
	SHORT  shift 19
	VOLATILE  shift 20
	EXTERN  shift 21
	STATIC  shift 22
	CONST  shift 23
	RESTRICT  shift 24
	AUTO  shift 25
	REGISTER  shift 26
	THREAD  shift 27
	SEMICOLON  shift 28
	ATTRIBUTE  shift 29
	INLINE  shift 30
	ASM  shift 31
	TYPEOF  shift 32
	DECLSPEC  shift 33
	MSATTR  shift 34
	PRAGMA_LINE  shift 35
	PRAGMA  shift 36
	AT_TRANSFORM  shift 37
	AT_TRANSFORMEXPR  shift 38
	AT_SPECIFIER  shift 39
	error  reduce 6
	EOF  reduce 3

	interpret  goto 40
	file  goto 41
	globals  goto 42
	global  goto 43
	decl_spec_list  goto 44
	type_spec  goto 45
	declaration  goto 46
	function_def  goto 47
	function_def_start  goto 48
	location  goto 49
	cvspec  goto 50
	pragma  goto 51
	attribute_nocv  goto 52


state 2
	%entry% : '\002' . file  (414)
	globals : .  (3)
	location : .  (6)

	IDENT  shift 4
	NAMED_TYPE  shift 5
	CHAR  shift 6
	INT  shift 7
	DOUBLE  shift 8
	FLOAT  shift 9
	VOID  shift 10
	INT64  shift 11
	ENUM  shift 12
	STRUCT  shift 13
	TYPEDEF  shift 14
	UNION  shift 15
	SIGNED  shift 16
	UNSIGNED  shift 17
	LONG  shift 18
	SHORT  shift 19
	VOLATILE  shift 20
	EXTERN  shift 21
	STATIC  shift 22
	CONST  shift 23
	RESTRICT  shift 24
	AUTO  shift 25
	REGISTER  shift 26
	THREAD  shift 27
	SEMICOLON  shift 28
	ATTRIBUTE  shift 29
	INLINE  shift 30
	ASM  shift 31
	TYPEOF  shift 32
	DECLSPEC  shift 33
	MSATTR  shift 34
	PRAGMA_LINE  shift 35
	PRAGMA  shift 36
	AT_TRANSFORM  shift 37
	AT_TRANSFORMEXPR  shift 38
	AT_SPECIFIER  shift 39
	$end  reduce 3
	error  reduce 6

	file  goto 53
	globals  goto 42
	global  goto 43
	decl_spec_list  goto 44
	type_spec  goto 45
	declaration  goto 46
	function_def  goto 47
	function_def_start  goto 48
	location  goto 49
	cvspec  goto 50
	pragma  goto 51
	attribute_nocv  goto 52


state 3
	$accept : %entry% . $end  (0)

	$end  accept


state 4
	global : IDENT . LPAREN old_parameter_list_ne RPAREN old_pardef_list SEMICOLON  (13)
	global : IDENT . LPAREN RPAREN SEMICOLON  (14)
	function_def_start : IDENT . parameter_list_startscope rest_par_list RPAREN  (295)
	function_def_start : IDENT . LPAREN old_parameter_list_ne RPAREN old_pardef_list  (296)
	function_def_start : IDENT . LPAREN RPAREN  (297)

	LPAREN  shift 54
	.  error

	parameter_list_startscope  goto 55


state 5
	type_spec : NAMED_TYPE .  (233)

	.  reduce 233


state 6
	type_spec : CHAR .  (208)

	.  reduce 208


state 7
	type_spec : INT .  (210)

	.  reduce 210


state 8
	type_spec : DOUBLE .  (214)

	.  reduce 214


state 9
	type_spec : FLOAT .  (213)

	.  reduce 213


state 10
	type_spec : VOID .  (207)

	.  reduce 207


state 11
	type_spec : INT64 .  (212)

	.  reduce 212


state 12
	type_spec : ENUM . id_or_typename  (228)
	type_spec : ENUM . id_or_typename LBRACE enum_list maybecomma RBRACE  (229)
	type_spec : ENUM . LBRACE enum_list maybecomma RBRACE  (230)
	type_spec : ENUM . just_attributes id_or_typename LBRACE enum_list maybecomma RBRACE  (231)
	type_spec : ENUM . just_attributes LBRACE enum_list maybecomma RBRACE  (232)

	IDENT  shift 56
	NAMED_TYPE  shift 57
	LBRACE  shift 58
	ATTRIBUTE  shift 59
	DECLSPEC  shift 60
	AT_NAME  shift 61
	.  error

	id_or_typename  goto 62
	just_attributes  goto 63
	just_attribute  goto 64


state 13
	type_spec : STRUCT . id_or_typename  (217)
	type_spec : STRUCT . just_attributes id_or_typename  (218)
	type_spec : STRUCT . id_or_typename LBRACE struct_decl_list RBRACE  (219)
	type_spec : STRUCT . LBRACE struct_decl_list RBRACE  (220)
	type_spec : STRUCT . just_attributes id_or_typename LBRACE struct_decl_list RBRACE  (221)
	type_spec : STRUCT . just_attributes LBRACE struct_decl_list RBRACE  (222)

	IDENT  shift 56
	NAMED_TYPE  shift 57
	LBRACE  shift 65
	ATTRIBUTE  shift 59
	DECLSPEC  shift 60
	AT_NAME  shift 61
	.  error

	id_or_typename  goto 66
	just_attributes  goto 67
	just_attribute  goto 64


state 14
	decl_spec_list : TYPEDEF . decl_spec_list_opt  (193)
	decl_spec_list_opt : .  (203)

	NAMED_TYPE  shift 5
	CHAR  shift 6
	INT  shift 7
	DOUBLE  shift 8
	FLOAT  shift 9
	VOID  shift 10
	INT64  shift 11
	ENUM  shift 12
	STRUCT  shift 13
	TYPEDEF  shift 14
	UNION  shift 15
	SIGNED  shift 16
	UNSIGNED  shift 17
	LONG  shift 18
	SHORT  shift 19
	VOLATILE  shift 20
	EXTERN  shift 68
	STATIC  shift 22
	CONST  shift 23
	RESTRICT  shift 24
	AUTO  shift 25
	REGISTER  shift 26
	THREAD  shift 27
	ATTRIBUTE  shift 29
	INLINE  shift 30
	TYPEOF  shift 32
	DECLSPEC  shift 33
	MSATTR  shift 34
	AT_SPECIFIER  shift 39
	error  reduce 203
	IDENT  reduce 203
	STAR  reduce 203
	RPAREN  reduce 203
	LPAREN  reduce 203
	LBRACKET  reduce 203
	COLON  reduce 203
	SEMICOLON  reduce 203
	COMMA  reduce 203
	AT_NAME  reduce 203

	decl_spec_list  goto 69
	type_spec  goto 45
	cvspec  goto 50
	decl_spec_list_opt  goto 70
	attribute_nocv  goto 52


state 15
	type_spec : UNION . id_or_typename  (223)
	type_spec : UNION . id_or_typename LBRACE struct_decl_list RBRACE  (224)
	type_spec : UNION . LBRACE struct_decl_list RBRACE  (225)
	type_spec : UNION . just_attributes id_or_typename LBRACE struct_decl_list RBRACE  (226)
	type_spec : UNION . just_attributes LBRACE struct_decl_list RBRACE  (227)

	IDENT  shift 56
	NAMED_TYPE  shift 57
	LBRACE  shift 71
	ATTRIBUTE  shift 59
	DECLSPEC  shift 60
	AT_NAME  shift 61
	.  error

	id_or_typename  goto 72
	just_attributes  goto 73
	just_attribute  goto 64


state 16
	type_spec : SIGNED .  (215)

	.  reduce 215


state 17
	type_spec : UNSIGNED .  (216)

	.  reduce 216


state 18
	type_spec : LONG .  (211)

	.  reduce 211


state 19
	type_spec : SHORT .  (209)

	.  reduce 209


state 20
	cvspec : VOLATILE .  (299)

	.  reduce 299


state 21
	global : EXTERN . string_constant declaration  (9)
	global : EXTERN . string_constant LBRACE globals RBRACE  (10)
	decl_spec_list : EXTERN . decl_spec_list_opt  (194)
	decl_spec_list_opt : .  (203)

	NAMED_TYPE  shift 5
	CST_STRING  shift 74
	CHAR  shift 6
	INT  shift 7
	DOUBLE  shift 8
	FLOAT  shift 9
	VOID  shift 10
	INT64  shift 11
	ENUM  shift 12
	STRUCT  shift 13
	TYPEDEF  shift 14
	UNION  shift 15
	SIGNED  shift 16
	UNSIGNED  shift 17
	LONG  shift 18
	SHORT  shift 19
	VOLATILE  shift 20
	EXTERN  shift 68
	STATIC  shift 22
	CONST  shift 23
	RESTRICT  shift 24
	AUTO  shift 25
	REGISTER  shift 26
	THREAD  shift 27
	ATTRIBUTE  shift 29
	INLINE  shift 30
	TYPEOF  shift 32
	FUNCTION__  shift 75
	PRETTY_FUNCTION__  shift 76
	DECLSPEC  shift 33
	MSATTR  shift 34
	AT_SPECIFIER  shift 39
	IDENT  reduce 203
	STAR  reduce 203
	LPAREN  reduce 203
	SEMICOLON  reduce 203
	AT_NAME  reduce 203

	string_constant  goto 77
	string_list  goto 78
	decl_spec_list  goto 69
	type_spec  goto 45
	cvspec  goto 50
	one_string  goto 79
	decl_spec_list_opt  goto 80
	attribute_nocv  goto 52


state 22
	decl_spec_list : STATIC . decl_spec_list_opt  (195)
	decl_spec_list_opt : .  (203)

	NAMED_TYPE  shift 5
	CHAR  shift 6
	INT  shift 7
	DOUBLE  shift 8
	FLOAT  shift 9
	VOID  shift 10
	INT64  shift 11
	ENUM  shift 12
	STRUCT  shift 13
	TYPEDEF  shift 14
	UNION  shift 15
	SIGNED  shift 16
	UNSIGNED  shift 17
	LONG  shift 18
	SHORT  shift 19
	VOLATILE  shift 20
	EXTERN  shift 68
	STATIC  shift 22
	CONST  shift 23
	RESTRICT  shift 24
	AUTO  shift 25
	REGISTER  shift 26
	THREAD  shift 27
	ATTRIBUTE  shift 29
	INLINE  shift 30
	TYPEOF  shift 32
	DECLSPEC  shift 33
	MSATTR  shift 34
	AT_SPECIFIER  shift 39
	error  reduce 203
	IDENT  reduce 203
	STAR  reduce 203
	RPAREN  reduce 203
	LPAREN  reduce 203
	LBRACKET  reduce 203
	COLON  reduce 203
	SEMICOLON  reduce 203
	COMMA  reduce 203
	AT_NAME  reduce 203

	decl_spec_list  goto 69
	type_spec  goto 45
	cvspec  goto 50
	decl_spec_list_opt  goto 81
	attribute_nocv  goto 52


state 23
	cvspec : CONST .  (298)

	.  reduce 298


state 24
	cvspec : RESTRICT .  (300)

	.  reduce 300


state 25
	decl_spec_list : AUTO . decl_spec_list_opt  (196)
	decl_spec_list_opt : .  (203)
